# TiledShading

./: CMakeLists.txt
cmake/: FindAssimp.cmake  FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake
dep/: CMakeLists.txt
dep/imgui-1.49/: CMakeLists.txt
shaders/: deferred_shader.frag  deferred_shader_geo_pass.frag  deferred_shader_geo_pass.vert  deferred_shader_light_pass.frag  deferred_shader_light_pass.vert  fs.frag  tiled_deferred_shader_light_pass.comp  tiled_deferred_shader_light_pass.frag  tiled_deferred_shader_light_pass.vert  tiled_deferred_shader_light_pass_debug.comp  vs.vert
src/: CMakeLists.txt  main.cpp
src/deferred_shading/: g_buffer.cpp  g_buffer.h
src/framebuffer/: framebuffer.cpp  framebuffer.h  framebuffer_builder.cpp  framebuffer_builder.h  g_buffer.cpp  g_buffer.h
src/mesh/: mesh.cpp  mesh.h
src/scene/: camera.cpp  camera.h  light.cpp  light.h  object.cpp  object.h  scene.cpp  scene.h
src/shaders/: deferred_shader_pipeline.cpp  deferred_shader_pipeline.h  imgui_pipeline.cpp  imgui_pipeline.h  pipeline.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  tiled_deferred_shader_pipeline.cpp  tiled_deferred_shader_pipeline.h
src/utils/: utils.cpp  utils.h
src/window/: window.cpp  window.h
